OO-6986: show selected tags in metadata editors